infrastructure/istio/gateways/https-redirect.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: https-redirect
  namespace: istio-system
  labels:
    app: ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        protocol: HTTP
        name: http
      hosts:
        - "*"
      tls:
        httpsRedirect: true
