infrastructure/istio/gateways/api-gateway-dev.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway-dev
  namespace: default
spec:
  hosts:
    - "api-staging.onepass.app"
  gateways:
    - default-gateway
  http:
    - route:
        - destination:
            # <service>.<namespace>.svc.cluster.local
            host: api-gateway-dev.hts.svc.cluster.local
            port:
              number: 3000
