infrastructure/istio/gateways/api-gateway-prod.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway-prod
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - "*"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ingress-production
      hosts:
        - "api.onepass.app"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway-prod
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway-prod
  http:
    - route:
        - destination:
            # <service>.<namespace>.svc.cluster.local
            host: api-gateway-prod.hts.svc.cluster.local
            port:
              number: 3000
