infrastructure/istio/gateways/grafana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ingress-production
      hosts:
        - "grafana.onepass.app"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - grafana
  http:
    - route:
        - destination:
            # <service>.<namespace>.svc.cluster.local
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000
