infrastructure/istio/gateways/lighthouse.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: lighthouse
spec:
  hosts:
    - lighthouse.onepass.app
  location: MESH_EXTERNAL
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lighthouse
  namespace: default
spec:
  hosts:
    - "lighthouse.onepass.app"
  gateways:
    - default-gateway
  http:
    - route:
        - destination:
            # <service>.<namespace>.svc.cluster.local
            host: lit-ocean-90649.herokuapp.com
