infrastructure/istio/gateways/whoami.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whoami
  namespace: default
spec:
  hosts:
    - "whoami.onepass.app"
  gateways:
    - default-gateway
  http:
    - route:
        - destination:
            # <service>.<namespace>.svc.cluster.local
            host: whoami.whoami.svc.cluster.local
            port:
              number: 80
